--- a/.gitea/workflows/ci.yml
+++ b/.gitea/workflows/ci.yml
@@ -7,16 +7,23 @@ name: CI
       - main
   pull_request:
 
+env:
+  CI_LUA_IMAGE: gitea.ttgrules.com/dev/lua:latest
+
 jobs:
   lua-syntax:
     name: Lua Syntax Check
     runs-on: ubuntu-latest
+    container:
+      image: ${{ env.CI_LUA_IMAGE }}
+      credentials:
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_TOKEN }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
-      - name: Install Lua compiler
-        run: apt update && apt install -y lua5.4
       - name: Check Lua file syntax
+        shell: bash
         run: |
           set -euo pipefail
           find . -type f -name '*.lua' -not -path './.git/*' -print0 | while IFS= read -r -d '' FILE; do
@@ -27,14 +34,13 @@ jobs:
   lua-format:
     name: Lua Format Check
     runs-on: ubuntu-latest
+    container:
+      image: ${{ env.CI_LUA_IMAGE }}
+      credentials:
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_TOKEN }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
-      - name: Install Rust toolchain
-        run: |
-          apt update && apt install -y curl ca-certificates build-essential
-          curl https://sh.rustup.rs -sSf | sh -s -- -y --profile minimal
-      - name: Install stylua
-        run: ~/.cargo/bin/cargo install --locked stylua
       - name: Check Lua formatting
-        run: ~/.cargo/bin/stylua --check .
+        run: stylua --check .
