add json validation and a general prettier check

--- a/.gitea/workflows/ci.yml
+++ b/.gitea/workflows/ci.yml
@@ -27,6 +27,45 @@ jobs:
             exit 1
           fi
 
+  json-validate:
+    name: JSON Validate
+    runs-on: ubuntu-latest
+    container:
+      image: ${{ env.CI_LUA_IMAGE }}
+      credentials:
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_TOKEN }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6.0.2
+      - name: Validate JSON files
+        shell: bash
+        run: |
+          set -euo pipefail
+          find . -type f -name '*.json' -not -path './.git/*' -print0 | \
+            while IFS= read -r -d '' FILE; do
+            echo "Validating ${FILE}"
+            jq empty "${FILE}"
+          done
+
+  format-check:
+    name: Format Check
+    runs-on: ubuntu-latest
+    container:
+      image: ${{ env.CI_LUA_IMAGE }}
+      credentials:
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_TOKEN }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6.0.2
+      - name: Setup Node
+        uses: actions/setup-node@v6.2.0
+        with:
+          node-version: 24
+      - name: Check formatting
+        run: npx --yes prettier --check "**/*.{json,md,mjs}"
+
   lua-syntax:
     name: Lua Syntax Check
     runs-on: ubuntu-latest
@@ -74,6 +113,8 @@ jobs:
     needs:
       - lua-syntax
       - lua-format
+      - json-validate
+      - format-check
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6.0.2
